# sheet-reader

./: .gitignore  COPYING  ProjectHome.md  README  README.md  configure  configure.ac  makefile.am  makefile.in
etc/: makefile.am  makefile.in
etc/sheetreader/: config.xml  makefile.am  makefile.in
etc/sheetreader/gocrdbs/: makefile.am  makefile.in
etc/sheetreader/gocrdbs/handwrite_09db/: makefile.am  makefile.in
etc/sheetreader/gocrdbs/handwrite_mbsdb/: db.lst  db_0062_4b8dd7af.pbm  db_0062_4b8dd7bb.pbm  db_0062_4b8dd7c7.pbm  db_0062_4b8dd7e4.pbm  db_0062_4b8dd7ef.pbm  db_0062_4b8dd840.pbm  db_0062_4b8dd84a.pbm  db_0062_4b8dd855.pbm  db_0062_4b8dd86f.pbm  db_0062_4b8dd87b.pbm  db_0062_4b8dd887.pbm  db_0062_4b8dd894.pbm  db_0062_4b8dd8a1.pbm  db_006d_4b8dd794.pbm  db_006d_4b8dd7c5.pbm  db_006d_4b8dd7ee.pbm  db_006d_4b8dd7f9.pbm  db_006d_4b8dd804.pbm  db_006d_4b8dd848.pbm  db_006d_4b8dd885.pbm  db_006d_4b8dd892.pbm  db_006d_4b8dd8a0.pbm  db_0073_4b8dd796.pbm  db_0073_4b8dd7b0.pbm  db_0073_4b8dd7ef.pbm  db_0073_4b8dd829.pbm  db_0073_4b8dd841.pbm  db_0073_4b8dd84b.pbm  db_0073_4b8dd856.pbm  db_0073_4b8dd87b.pbm  makefile.am  makefile.in
etc/sheetreader/gocrdbs/handwritedb/: db.lst  db_0062_4b8dd795.pbm  db_0062_4b8dd7a2.pbm  db_0062_4b8dd7d4.pbm  db_0062_4b8dd7fb.pbm  db_0062_4b8dd805.pbm  db_0062_4b8dd828.pbm  db_0062_4b8dd836.pbm  db_0062_4b8dd863.pbm  db_006d_4b8dd7a0.pbm  db_006d_4b8dd7ad.pbm  db_006d_4b8dd7ba.pbm  db_006d_4b8dd7d2.pbm  db_006d_4b8dd7e2.pbm  db_006d_4b8dd826.pbm  db_006d_4b8dd834.pbm  db_006d_4b8dd83f.pbm  db_006d_4b8dd854.pbm  db_006d_4b8dd861.pbm  db_006d_4b8dd86e.pbm  db_006d_4b8dd879.pbm  db_0073_4b8dd7a3.pbm  db_0073_4b8dd7bc.pbm  db_0073_4b8dd7ca.pbm  db_0073_4b8dd7d4.pbm  db_0073_4b8dd7e6.pbm  db_0073_4b8dd7fc.pbm  db_0073_4b8dd805.pbm  db_0073_4b8dd837.pbm  db_0073_4b8dd864.pbm  db_0073_4b8dd870.pbm  db_0073_4b8dd887.pbm  db_0073_4b8dd895.pbm  db_0073_4b8dd8a2.pbm  makefile.am  makefile.in
etc/sheetreader/gocrdbs/iddb/: makefile.am  makefile.in
etc/sheetreader/gocrdbs/idocrbdb/: makefile.am  makefile.in
etc/sheetreader/srml/: example.xml  makefile.am  makefile.in
include/: config.h.in
src/: TODO  cco_srAnalyzer.c  cco_srAnalyzer.h  cco_srConf.c  cco_srConf.h  cco_srDb.c  cco_srDb.h  cco_srMl.c  cco_srMl.h  cco_srMlSheet.c  cco_srMlSheet.h  cco_srOcr.c  cco_srOcr.h  cco_srOcrGocr.c  cco_srOcrGocr.h  cco_srOcrKocr.c  cco_srOcrKocr.h  cco_srOcrNhocr.c  cco_srOcrNhocr.h  cco_srOcrOpencv.c  cco_srOcrOpencv.h  cco_vSrPattern.c  cco_vSrPattern.h  makefile.am  makefile.in  sheetreader.c  sheetreader.h  utility.c  utility.h
tests/: Makefile  README  checkAnswer  correctData.csv  filter  test-sheetreader.sh
tests/etc/: list-mbs.db  list-num.db  list-ocrb.db
tests/receive_sheetreader/: config.xml
tests/receive_sheetreader/srml/: faxocr.xml
tests/samples/: fax-01.tif  fax-02.tif  fax-03.tif  fax-04.tif  fax-05.tif  fax-06.tif
